--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.2",
+    "react-d3-components": "^0.9.1",
+    "react-d3-radar": "^0.2.6",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
   },
