--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-d3-components": "^0.9.1",
     "react-d3-radar": "^0.2.6",
     "react-dom": "^16.4.2",
+    "react-google-login": "^4.0.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
