--- a/package.json
+++ b/package.json
@@ -8,12 +8,24 @@
     "react-d3-radar": "^0.2.6",
     "react-dom": "^16.4.2",
     "react-google-login": "^4.0.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
